--- a/onestep/package.json
+++ b/onestep/package.json
@@ -17,6 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://dev.takeonestep.com/",
   "eslintConfig": {
     "extends": [
       "react-app",
