changed the all walks to list view, changed proxy to nicer one

--- a/onestep/package.json
+++ b/onestep/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://dev.takeonestep.com/",
+  "proxy": "https://dev.takeonestep.com/api/v3/take_home_project/",
   "eslintConfig": {
     "extends": [
       "react-app",
